# Caisy

./: .gitignore  CMakeLists.txt  License.txt  Peok.sln  README.md
Peok/: EBO.cpp  Peok.vcxproj  Peok.vcxproj.filters  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  shaderClass.cpp  tiles.cpp  window.cpp  window.h
Peok/x64/Debug/: Peok.exe.recipe  vc142.idb
Peok/x64/Debug/Peok.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Peok.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Resources/Shaders/: basic.shader  text.shader
Resources/shaders/: background.frag  background.vert  caret.frag
include/: CMakeLists.txt  CaisyConfig.h.in  EBO.h  shaderClass.h  text.h  tiles.h  update.h  window.h
include/glad/: glad.h
libs/: CMakeLists.txt
libs/freetype/objs/: freetype.exp
libs/freetype/objs/x64/Release/: freetype.dll.recipe  freetype.vcxproj.FileListAbsolute.txt  ftver.res
libs/freetype/objs/x64/Release Static/: freetype.vcxproj.FileListAbsolute.txt  ftver.res
libs/freetype/objs/x64/Release Static/freetype.tlog/: CL.14396.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  freetype.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libs/freetype/objs/x64/Release/freetype.tlog/: CL.14532.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  freetype.lastbuildstate  freetype.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glib/: CONTROL
libs/glib/debug/lib/pkgconfig/: gio-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc
libs/glib/include/glib-2.0/gio/: gioenumtypes.h
libs/glib/include/glib-2.0/gobject/: glib-enumtypes.h
libs/glib/lib/pkgconfig/: gio-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc
libs/glib/share/glib/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/glib/tools/glib/: glib-gettextize
libs/harfbuzz/: CONTROL
libs/harfbuzz/debug/lib/pkgconfig/: harfbuzz-subset.pc  harfbuzz.pc
libs/harfbuzz/include/harfbuzz/: hb-features.h
libs/harfbuzz/lib/pkgconfig/: harfbuzz-subset.pc  harfbuzz.pc
libs/harfbuzz/share/harfbuzz/: harfbuzzConfig.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
libs/pango/: CONTROL
libs/pango/share/pango/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: VBO.cpp  glad.c  main.cpp  shaderClass.cpp  text.cpp  tiles.cpp  update.cpp  window.cpp
src/App/: Application.cpp  Application.h  Object.h  ObjectStack.cpp  ObjectStack.h  WindowClass.cpp  WindowClass.h
src/Events/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyEvent.h  MouseEvent.h
src/Renderer/EBO/: EBO.cpp  EBO.h
src/Renderer/Shader/: Shader.cpp  Shader.h
src/Renderer/VAO/: VAO.cpp  VAO.h  VertexArrayLayout.h
src/Renderer/VBO/: VBO.cpp  VBO.h
src/TextEditor/: TextEditor.cpp  TextEditor.h
x64/Debug/: Peok.ilk
